<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="cmput301f17t12.quirks.Activities.EditQuirkActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/SaveBut"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="saveButtonClicked"
                android:text="Save" />

            <Button
                android:id="@+id/DeleteBut"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="DeleteButtonClicked"
                android:text="Delete" />

            <Button
                android:id="@+id/CancelBut"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="cancelButtonClicked"
                android:text="Cancel" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/QuirkEditradioButtonFri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/QuirkEditradioButtonThur"
            android:layout_alignBottom="@+id/QuirkEditradioButtonThur"
            android:layout_toEndOf="@+id/QuirkEditradioButtonThur"
            android:text="Friday" />

        <CheckBox
            android:id="@+id/QuirkEditradioButtonSat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sat"
            android:layout_below="@+id/QuirkEditradioButtonMon"
            android:layout_alignStart="@+id/QuirkEditradioButtonMon" />

        <CheckBox
            android:id="@+id/QuirkEditradioButtonSun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/QuirkEditradioButtonSat"
            android:layout_alignBottom="@+id/QuirkEditradioButtonSat"
            android:layout_toEndOf="@+id/QuirkEditradioButtonSat"
            android:text="Sun" />

        <CheckBox
            android:id="@+id/QuirkEditradioButtonWed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Weds"
            android:layout_alignBaseline="@+id/QuirkEditradioButtonTue"
            android:layout_alignBottom="@+id/QuirkEditradioButtonTue"
            android:layout_toEndOf="@+id/QuirkEditradioButtonTue" />

        <CheckBox
            android:id="@+id/QuirkEditradioButtonThur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Thurs"
            android:layout_alignBaseline="@+id/QuirkEditradioButtonWed"
            android:layout_alignBottom="@+id/QuirkEditradioButtonWed"
            android:layout_toEndOf="@+id/QuirkEditradioButtonWed" />

        <CheckBox
            android:id="@+id/QuirkEditradioButtonTue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tues"
            android:layout_alignBaseline="@+id/QuirkEditradioButtonMon"
            android:layout_alignBottom="@+id/QuirkEditradioButtonMon"
            android:layout_toEndOf="@+id/QuirkEditradioButtonMon" />

        <CheckBox
            android:id="@+id/QuirkEditradioButtonMon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewOccurence"
            android:layout_below="@+id/textViewOccurence"
            android:checked="false"
            android:text="Mon" />

        <TextView
            android:id="@+id/textViewOccurence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="Occurence"
            android:layout_marginEnd="12dp"
            android:textSize="15sp"
            android:layout_below="@+id/QuirkeditTextReason"
            android:layout_alignStart="@+id/QuirkeditTextReason" />

        <EditText
            android:id="@+id/QuirkeditTextReason"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/backgroundlight"
            android:inputType="textMultiLine"
            android:layout_marginEnd="12dp"
            android:maxLength="30"
            android:layout_below="@+id/textViewReason"
            android:layout_alignStart="@+id/textViewReason" />

        <TextView
            android:id="@+id/textViewReason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Reason"
            android:textSize="17sp"
            android:layout_marginEnd="12dp"
            android:layout_below="@+id/QuirkeditTextGoal"
            android:layout_alignStart="@+id/QuirkeditTextGoal"
            android:layout_marginTop="12dp" />

        <TextView
            android:id="@+id/textViewGoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="94dp"
            android:textSize="17sp"
            android:text="Goal"
            android:layout_below="@+id/QuirkeditTextTitle"
            android:layout_alignStart="@+id/QuirkeditTextTitle" />

        <EditText
            android:id="@+id/QuirkeditTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewTitle"
            android:layout_below="@+id/textViewTitle"
            android:background="@color/backgroundlight"
            android:inputType="textPersonName"
            android:layout_marginEnd="12dp"
            android:maxLength="20"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/QuirkeditTextType"
            android:layout_below="@+id/QuirkeditTextType"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:layout_marginEnd="12dp"
            android:text="Title" />

        <TextView
            android:id="@+id/textViewType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:textSize="17sp"
            android:text="Type" />

        <EditText
            android:id="@+id/QuirkeditTextType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewType"
            android:layout_below="@+id/textViewType"
            android:background="@color/backgroundlight"
            android:layout_marginEnd="12dp"
            android:textSize="17sp"

            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/QuirkeditTextGoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textViewGoal"
            android:layout_below="@+id/textViewGoal"
            android:layout_marginEnd="12dp"
            android:textSize="17sp"
            android:inputType="number" />

        <TextView
            android:id="@+id/textViewStartingDateEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Starting Date"
            android:layout_below="@+id/QuirkeditTextTitle"
            android:layout_alignStart="@+id/QuirkeditTextTitle"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/textViewSelectStartingDateEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/QuirkeditTextTitle"
            android:layout_alignStart="@+id/textViewStartingDateEdit"
            android:layout_below="@+id/textViewStartingDateEdit"
            android:layout_marginTop="13dp"
            android:textSize="17sp"
            android:background="@color/backgroundlight"
            />
    </RelativeLayout>
